apps/healthview-ecgprediction/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecgprediction-backend
  namespace: ecgprediction
  labels:
    app: ecgprediction-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecgprediction-backend
  template:
    metadata:
      labels:
        app: ecgprediction-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ecgprediction-backend
          image: ghcr.io/curatimexai/nightingale-ecgprediction-backend:dbf626b296544e0b20176610d201cb85f51653c5
          ports:
            - containerPort: 8000
