apps/healthview-ecgprediction/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecgprediction-frontend
  namespace: ecgprediction
  labels:
    app: ecgprediction-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecgprediction-frontend
  template:
    metadata:
      labels:
        app: ecgprediction-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ecgprediction-frontend
          image: ghcr.io/curatimexai/nightingale-ecgprediction-frontend:dbf626b296544e0b20176610d201cb85f51653c5
          ports:
            - containerPort: 80
