apps/healthview-ecgprediction/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecgprediction-backend-service
  namespace: ecgprediction
spec:
  selector:
    app: ecgprediction-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
