apps/healthview-ecgprediction/service-frontend.yaml
apiVersion: v1
kind: Service
metadata: 
   name: ecgprediction-frontend-service 
   namespace: ecgprediction
spec: 
   selector:
      app: ecgprediction-frontend
   ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
